--- a/scss/shortcodes/_extra.scss
+++ b/scss/shortcodes/_extra.scss
@@ -281,6 +281,7 @@ body{
 html, body {
   height: 100%;
   min-height: 18em;
+  overflow-x: hidden !important;
 }
 
 .frontend-side {
