--- a/scss/shortcodes/_navbar.scss
+++ b/scss/shortcodes/_navbar.scss
@@ -33,6 +33,7 @@
 
 		.container{
 			background-color: #fff;
+			padding-right: 30px;
 			padding-left: 30px;
 			margin-top: 15px;
 			margin-bottom: 15px;
